<resources>
    <string name="app_name">My ApplicationRubbish</string>
    <string name="required">Required</string>
    <string name="wrong_email">Wrong Email Format</string>
    <string name="gender_toast">Please , Select a gender</string>
    <string name="specialist_toast">Please , Select your specialist</string>
    <string name="status_toast">Please , Select a status</string>
    <string name="date_toast">Please , Select a date</string>
    <string name="medical_measurement">Medical Measurement</string>
    <string name="patient_doctor">Patient Doctor</string>
    <string name="patient_nurse">Patient Nurse</string>
    <string name="status">Status</string>
    <string name="add_nurse">Add Nurse</string>
    <string name="request">Request</string>
    <string name="case1">Case</string>
    <string name="select_analysis_employee">Select Laboratory Physician employee</string>
    <string name="send">Send</string>
    <string name="analysis_warn">Please add Laboratory Physician name</string>
    <string name="analysis_emp_warn">Please select Laboratory Physician employee</string>
    <string name="medical_record">Medical Record</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_age">Patient Age</string>
    <string name="patient_date">Patient Date</string>
    <string name="patient_status">Patient Status</string>
    <string name="patient_phone">Patient Phone</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="case_description">Case Description</string>
    <string name="send_call">Send Call</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="sugar_analysis">Sugar measurement</string>
    <string name="temp">temperature</string>
    <string name="heart_rate">Heart rate</string>
    <string name="fluid_balance">Fluid balance</string>
    <string name="respiratory_rate">Respiratory rate</string>
    <string name="task_details">Task Details</string>
    <string name="to_do">To do</string>
    <string name="execution">Execution</string>
    <string name="add_note">Add Note</string>
    <string name="create_report">Create Report</string>
    <string name="report_tittle">Report Tittle</string>
    <string name="report_description">Report Description</string>

    <string name="leaving">Leaving</string>
    <string name="note">Note</string>
    <string name="accept">Accept</string>
    <string name="busy">Busy</string>
    <string name="you_are_out_of_hospital">You are out of hospital</string>
    <string name="location_warn">Location Not Avalible</string>
    <string name="cases">Cases</string>
    <string name="show_case">Show Case</string>

    <string name="call_doctor">Call Doctor</string>
    <string name="add_measurement">Add Measurement</string>
    <string name="upload">Upload Image</string>
    <string name="add_record">Add Record</string>
    <string name="todo">Todo</string>
    <string name="add">Add</string>
    <string name="todo_details">Todo Details</string>
    <string name="added">Added</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Note</string>
    <string name="select_employee">Select Employee</string>
    <string name="add_tasks_warn">Please add tasks</string>
    <string name="report_details">Report Details</string>
    <string name="end">End</string>
    <string name="reply_manager">Reply Manager</string>
    <string name="tap_to_reply">Tap to reply</string>
    <string name="create_task">Create Task</string>
    <string name="attended_massage">You are already register</string>
    <string name="task_finish_warn">\"Task already finished \"</string>
    <string name="select_doctor_warn">Please Select Doctor</string>
    <string-array name="gender_array">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="specialist_array">
        <item>Specialist</item>
        <item>doctor</item>
        <item>nurse</item>
        <item>receptionist</item>
        <item>manger</item>
        <item>hr</item>
        <item>analysis</item>
    </string-array>
    <string-array name="status_array">
        <item>Status</item>
        <item>Single</item>
        <item>Married</item>
    </string-array>
</resources>