<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0356341"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_task"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_up" />
    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:padding="3dp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_up"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        />

    <EditText
        android:id="@+id/edit_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/edit_shape_trans"
        android:hint="@string/task_name"
        android:maxLines="1"
        android:textColor="@color/black"
        android:padding="12sp"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        />

    <TextView
        android:id="@+id/edit_doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/edit_shape_trans"
        android:maxLines="1"
        android:padding="12sp"
        android:text="@string/select_employee"
        android:textColor="@color/dark_gray"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        app:drawableEndCompat="@drawable/right_arrow"
        app:layout_constraintTop_toBottomOf="@+id/edit_task_name" />

    <EditText
        android:id="@+id/edit_report_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/edit_shape_trans"
        android:gravity="top"
        android:hint="@string/task_description"
        android:padding="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintTop_toBottomOf="@+id/edit_doctor" />

    <TextView
        android:id="@+id/todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/todo"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_report_description" />

    <TextView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_report_description" />

    <TextView
        android:id="@+id/btn_add"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/add"
        app:layout_constraintTop_toTopOf="@id/add"
        app:layout_constraintBottom_toBottomOf="@id/add"
        app:layout_constraintEnd_toStartOf="@id/add"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_tasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        app:layout_constraintHeight_default="wrap"
        app:reverseLayout="false"
        tools:listitem="@layout/item_to_do"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_send_task"
        app:layout_constraintTop_toBottomOf="@+id/todo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:paddingVertical="8dp"
        android:text="@string/send"
        android:backgroundTint="@color/defaultGreen"
        android:textSize="13dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>