<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_case_details_nurse"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_case">

    <ImageView
        android:id="@+id/image_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:src="@drawable/ic_delay"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/patient_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/patient_status" />

    <TextView
        android:id="@+id/patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_name"
        android:textSize="12sp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/text_patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Ahmed ali"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/patient_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/patient_name" />

    <TextView
        android:id="@+id/patient_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_age"
        android:textSize="12sp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_name" />

    <TextView
        android:id="@+id/text_patient_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Ahmed ali"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/patient_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/patient_age" />

    <TextView
        android:id="@+id/patient_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/patient_phone"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_age" />

    <TextView
        android:id="@+id/text_patient_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Ahmed ali"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/patient_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/patient_phone" />

    <TextView
        android:id="@+id/patient_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/patient_date"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_phone" />

    <TextView
        android:id="@+id/text_patient_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Ahmed ali"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/patient_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/patient_date" />

    <TextView
        android:id="@+id/patient_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/patient_doctor"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_date" />

    <TextView
        android:id="@+id/text_patient_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Ahmed ali"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/patient_doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/patient_doctor" />

    <TextView
        android:id="@+id/patient_nurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/patient_nurse"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_doctor" />

    <TextView
        android:id="@+id/text_patient_nurse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Ahmed ali"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/patient_nurse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/patient_nurse" />

    <TextView
        android:id="@+id/patient_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/status"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_nurse" />

    <TextView
        android:id="@+id/text_patient_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/patient_status"
        app:layout_constraintEnd_toStartOf="@+id/image_condition"
        app:layout_constraintTop_toTopOf="@+id/patient_status"
        tools:text="Ahmed ali" />

    <TextView
        android:id="@+id/patient_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/case_description"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_status" />

    <TextView
        android:id="@+id/text_patient_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:cornerRadius="5dp"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patient_desc"
        tools:text="Ahmed ali" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_call_doctor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginHorizontal="12dp"
        android:backgroundTint="@color/main_color"
        android:paddingVertical="8dp"
        android:text="@string/call_doctor"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>