<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:visibility="gone"
    tools:visibility="visible"
    android:id="@+id/parentLayoutMedicalMeasurementNurse"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_case"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/doc_pic_default" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        tools:text= "Ahmed Ali"
        android:textSize="13sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/text_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Specialist - Doctor"
        android:textColor="@color/main_color"
        android:textSize="11sp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/text_user_name" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_user_name"
        tools:text="12-23-2222" />

    <TextView
        android:id="@+id/text_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="13dp"
        tools:text="Details note : Lorem Ipsum is simply dummy text of printing and typesetting industry.Lorem Ipsum"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@+id/text_type" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/medical_measurement"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_details" />

    <TextView
        android:id="@+id/blood_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blood_pressure"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:padding="5dp"
        android:background="@drawable/edit_shape"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/edit_blood_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:inputType="numberSigned"
        android:hint="@string/blood_pressure"
        android:padding="5dp"
        android:background="@drawable/edit_shape"
        android:textColor="@color/black"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/blood_pressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blood_pressure" />

    <TextView
        android:id="@+id/suger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar_analysis"
        android:textColor="@color/black"
        android:padding="5dp"
        android:background="@drawable/edit_shape"
        android:textSize="12sp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood_pressure" />

    <EditText
        android:id="@+id/edit_suger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:inputType="numberSigned"
        android:hint="@string/sugar_analysis"
        android:padding="5dp"
        android:background="@drawable/edit_shape"
        app:layout_constraintBottom_toBottomOf="@+id/suger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/suger"
        />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textColor="@color/black"
        android:padding="5dp"
        android:background="@drawable/edit_shape"
        android:textSize="12dp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suger" />

    <EditText
        android:id="@+id/edit_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:inputType="numberSigned"
        android:hint="@string/temp"
        android:padding="5dp"
        android:background="@drawable/edit_shape"
        app:layout_constraintBottom_toBottomOf="@+id/temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/temp"
        />

    <TextView
        android:id="@+id/fluid_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fluid_balance"
        android:textColor="@color/black"
        android:padding="5dp"
        android:background="@drawable/edit_shape"
        android:textSize="12dp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <EditText
        android:id="@+id/edit_fluid_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:inputType="numberSigned"
        android:hint="@string/fluid_balance"
        android:padding="5dp"
        android:background="@drawable/edit_shape"
        app:layout_constraintBottom_toBottomOf="@+id/fluid_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fluid_balance"
        />

    <TextView
        android:id="@+id/respiratory_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respiratory_rate"
        android:textColor="@color/black"
        android:padding="5dp"
        android:background="@drawable/edit_shape"
        android:textSize="12dp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fluid_balance" />

    <EditText
        android:id="@+id/edit_respiratory_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:inputType="numberSigned"
        android:hint="@string/fluid_balance"
        android:padding="5dp"
        android:background="@drawable/edit_shape"
        app:layout_constraintBottom_toBottomOf="@+id/respiratory_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/respiratory_rate"
        />

    <TextView
        android:id="@+id/heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heart_rate"
        android:textColor="@color/black"
        android:padding="5dp"
        android:background="@drawable/edit_shape"
        android:textSize="15dp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respiratory_rate" />

    <EditText
        android:id="@+id/edit_heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:inputType="numberSigned"
        android:hint="@string/heart_rate"
        android:padding="5dp"
        android:background="@drawable/edit_shape"
        app:layout_constraintBottom_toBottomOf="@+id/heart_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/heart_rate"
        />

    <EditText
        android:id="@+id/edit_note_measurement"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/back_ground_gray"
        android:backgroundTint="@color/dark_gray"
        android:gravity="top"
        android:hint="@string/note"
        android:padding="12sp"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_measurement"
        android:layout_marginVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/heart_rate"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginHorizontal="12dp"
        android:backgroundTint="@color/main_color"
        android:paddingVertical="8dp"
        android:text="@string/add_measurement"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>